Milestone III documentation complete

--- a/Milestone_III_Prediction.ipynb
+++ b/Milestone_III_Prediction.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "24        68%          Average            High  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -897,12 +897,12 @@
     "* Uses 1-hot encoding to change 'Rating Category' into 3 columns of 0 and 1\n",
     "* Drops any column containing strings ('Title' and 'Actor')\n",
     "\n",
-    "<p> We have tested our models against one category, the inflation adjusted revenue.  Lets see if our models maintain a consistent accuracy if we test for a different statistic. So now we will return to the original data frame and then tweak it to create a new data frame, rate.  This process is exactly the same as before, with the exception that is now the 'Revenue Category' column that is the subject of the 1-hot encoding. </p>   "
+    "<p> We have tested our models against one category, the inflation adjusted revenue.  Lets see if our models maintain a consistent accuracy if we test for a different statistic. So now we will return to the original data frame and then tweak it to create a new data frame, rate.  We will use this data set to predict the average rating as one of the three categories from before.  This process is exactly the same as it was earlier.  The exception, being, that it is now the 'Revenue Category' column that is the subject of the 1-hot encoding, since we are predicting rating. </p>   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,12 +920,15 @@
     "```\n",
     "Converts df_rev to scalar values, drops column to be predicted and uses sklearn model selection to create training data\n",
     "```\n",
-    "* Test size determines the split of training data versus test data"
+    "* Test size determines the split of training data versus test data\n",
+    "* Variables have all been changed but it had no effect\n",
+    "\n",
+    "<p> Once again we will go through the process of creating the necessary lists for the train test split module.  Again, it involves dropping the tested category and using the scalar.  Where there more categories being tested, it would be prudent to place this into a function with the input parameter of a dataframe.  However, since it is only being used twice, we will just copy the code from above and change the relevant variables.  In this case that is simply the columns called in the first two lines."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,32 +952,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create and Test the Revenue Category Models\n",
+    "### Create and Test the Ratings Category Models\n",
     "```\n",
     "Creates both a KNN and DTC models and tests their accuracy\n",
     "Input: X_train, X_test, y_train, y_test, lists created by train_test_split\n",
     "Output: f-strings, contain accuracy scores for each model\n",
     "```\n",
     "* n_neighbors determines the number of relative datapoints each prediction has.  Essentially, it determines the complexity of the model\n",
-    "    * More neighbors equals a more accurate model that requires more data points"
+    "    * More neighbors equals a more accurate model that requires more data points\n",
+    "\n",
+    "<p> We will create the same two prediction models for the Ratings Category that we saw previously when we created them for the Revenue Category.  In fact, the code could be copy and pasted without edits and would function correctly.  However, in this scenario is not the case.  The variables were all appended to include a 2 at the end.  This was an attempt to see if the model was tied to previous iterations.  It turned out to be untrue, the model is unique to each case and reusing variables has no effect on the results.  This was mostly ran as a check on the initial revenue predictions, and theoretically the accuracy score for ratings should be in the same ballpark as the revenue was. </p>  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Revenue Category Prediction using KNN: 71.43%\n"
+      "Accuracy of Ratings Category Prediction using KNN: 71.43%\n"
      ]
     }
    ],
    "source": [
     "# Create the KNN model\n",
-    "knn2 = KNeighborsClassifier(n_neighbors=2)\n",
+    "knn2 = KNeighborsClassifier(n_neighbors=2) # Best value is sqrt(n)?\n",
     "knn2.fit(X2_train, y2_train)\n",
     "\n",
     "# Make predictions for 'Rating Category' and 'Revenue Category'\n",
@@ -983,19 +988,19 @@
     "# Print the Accuracy score\n",
     "score_knn2 = accuracy_score(y2_test, y2_pred) * 100\n",
     "score_knn2 = \"{:,.2f}%\".format(score_knn2)\n",
-    "print('Accuracy of Revenue Category Prediction using KNN: '+ score_knn2)"
+    "print('Accuracy of Ratings Category Prediction using KNN: '+ score_knn2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Revenue Category Prediction using DTC: 71.43%\n"
+      "Accuracy of Ratings Category Prediction using DTC: 71.43%\n"
      ]
     }
    ],
@@ -1010,19 +1015,25 @@
     "# Print the results\n",
     "score_dct2 = accuracy_score(y2_test, y2_pred) * 100\n",
     "score_dct2 = \"{:,.2f}%\".format(score_dct2)\n",
-    "print('Accuracy of Revenue Category Prediction using DTC: '+ score_dct2)"
+    "print('Accuracy of Ratings Category Prediction using DTC: '+ score_dct2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion"
+    "### Conclusion\n",
+    "```\n",
+    "Summarizes the accuracy scores of the two models against both predicted columns, also calculates and displays an average accuracy score.\n",
+    "```\n",
+    "* Average accuracy is placed into 3 categories, inaccurate, moderately accurate, and highly accurate\n",
+    "\n",
+    "<p> The biggest take-away from running not only the James Bond Franchise data, but the data from other similar series, is that 25 is simply not a big enough sample size to produce accurate results.  Sure, n_neighbors and sample sizes can be tweaked, but they have a small impact that typically doesn't carry over to other data sets.  Realistically, to produce worthwhile models a minimum sample size of about 100 is likely necessary.  Given a large enough data set.  It would be interesting to see if revenue could be accurately predicted from review scores.  It stands to reason that there would be a correlation between the two; that a higher rated movie would influence audiences to go and see it and thus increase its revenue.  Unfortunately, even the larger data sets such as the MCU and Bond do not have enough films for accurate comparisons.  If I were to continue work with this project, that is how I would attack it.  I would attempt to create a large database of hundreds of movies from which to compare each individual franchise.  As it stands, the program is great at generating data from a list of movies and providing an accurate and complete analysis of that data, but falls short of making accurate predicitons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1032,12 +1043,13 @@
       "For the Adjusted Revenue Category:\n",
       "                KNN Accuracy: 71.43%\n",
       "                DCT Accuracy: 71.43%\n",
-      "For the Adjusted Revenue Category:\n",
+      "\n",
+      "For the Adjusted Ratings Category:\n",
       "                KNN Accuracy: 71.43%\n",
       "                DCT Accuracy: 71.43%\n",
       "-------------------------------------------------------\n",
       "The combined score average is: 71.43%\n",
-      "         This model is considered: Moderately Accurate\n"
+      "         These models are considered: Moderately Accurate\n"
      ]
     }
    ],
@@ -1046,8 +1058,8 @@
     "print('For the Adjusted Revenue Category:')\n",
     "print(f'                KNN Accuracy: {score_knn}')\n",
     "print(f'                DCT Accuracy: {score_dct}')\n",
-    "\n",
-    "print('For the Adjusted Revenue Category:')\n",
+    "print('')\n",
+    "print('For the Average Ratings Category:')\n",
     "print(f'                KNN Accuracy: {score_knn2}')\n",
     "print(f'                DCT Accuracy: {score_dct2}')\n",
     "\n",
